force-app/main/default/objects/Record_Alert_Display_Config__mdt/Record_Alert_Display_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configurations for the Record Alert Display Lightning Web Component.</description>
    <label>Record Alert Display Config</label>
    <pluralLabel>Record Alert Display Configs</pluralLabel>
</CustomObject>