force-app/main/default/objects/Record_Alert_Display_Config__mdt/fields/Flow_Action_ApiName__c.field-meta.xml
<CustomField>
    <fullName>Flow_Action_ApiName__c</fullName>
    <label>Flow Action ApiName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>