force-app/main/default/objects/Record_Alert_Display_Config__mdt/fields/Flow_Action_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>Flow_Action_Button_Label__c</fullName>
    <description>Label for the button that will be associated with each Record Alert Category.</description>
    <inlineHelpText>Label for the button that will be associated with each Record Alert Category.</inlineHelpText>
    <label>Flow Action Button Label</label>
    <length>15</length>
    <type>Text</type>
</CustomField>