force-app/main/default/objects/Record_Alert_Display_Config__mdt/fields/Record_Alert_Category_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Alert_Category_Developer_Name__c</fullName>
    <label>Record Alert Category Developer Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>