force-app/main/default/objects/Record_Alert_Display_Config__mdt/fields/Record_Alert_Icon__c.field-meta.xml
<CustomField>
    <fullName>Record_Alert_Icon__c</fullName>
    <inlineHelpText>Developer name of the static resource or an SLDS icon name to associate with that record alert category. If no value is set the the default icon will load.</inlineHelpText>
    <label>Record Alert Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>